--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/javascript/game.js"></script>
+   
     <title>game</title>
 </head>
 
@@ -15,7 +15,8 @@
     <h1>Guess what letter I'm thinking of</h1>
     <div span="userguess">
         <p>
-            <h2></h2><span type="text" id="user-text"><strong>TYPE HERE</strong></span></h2>
+            <h2><span type="text" id="user-text"><strong>TYPE HERE</strong></span></h2>
+            <h2><span type="text" id="wordtoguess"> </span></h2>
             <br>
             <p>Wins: <span id="win">__</p>
             <p>Losses: <span id="loss">__</p>
@@ -23,92 +24,7 @@
             <p> Your Guesses So Far: <span id="guessnow">__</p>
         </p>
     </div>
+
+<script src="./assets/javascript/game.js"></script>
 </body>
-
-<script>
-
-var countries = ["spain", "croatia", "fiji", "guam"]
-///////-------------chooseing a letter-------------------
-/// user press any letter to find computer choice BREAK       
-var computerchoice = countries[Math.floor(Math.random() * countries.length)];
-//// if its a letter from the computer choice
-/// computer dispalys the number at appropriate  blank space
-var blankAnswer = [];
-for (var i = 0; i < computerchoice.length; i++) {
-  blankAnswer[i] = "_";
-}
-///// display remaining lettes
-var lettersRemain = computerchoice.length;
-// while (lettersRemain >0 ) {
-//   return;
-    
-// }
-var userText = document.getElementById("user-text");
-document.onkeyup = function (event) {
-    userText.textContent = event.key;
-};
-// if(userText === null) {
-//     return;
-// } else if (userText.length !== 1) {
-//     alert("Please type a letter");
-// } else {
-    
-// }
-
-
-for (var j = 0; j < computerchoice.length; j++)
-  if (computerchoice[j] === userText) {
-      blankAnswer[j] = userText;
-      lettersRemain--;
-      console.log(j);
-  }
-
-///////-------------chooseing a letter-------------------
-/// computer decided if it is a letter from the computer choice length
-
-
-///  else  display letter on screen and have it stay 
-
-
-///---------------- is guess right or wrong -------------
-//if guess is wrongy alert() or document.write "GUESS AGAIN"
-//when GUESS AGAIN appear subtract -1 from starting chances;
-
-//----------------win or loose---------------------------
-// LOOP until last letter is found by userText
-/// OR if  chances === 0
-//if  last letter is found and chanced are >=1 
-// DISPLAY " YOU WIN"
-// add 1 point to winner sectionw hen display " you win" 
-// if  chances === < 1
-//add 1 point to losses  display "YOU LOOSE TRY ANOTHER WORD"
-// when 1 point added to WIN || LOSS  generate a new  computer choice
-
-
-// /// the index the computer choices
-// /// count the letters in the coumputer choice
-// var countryname = computerchoice.length;
-// /// visualize the blank slots (--------------need review--------------)
-
-
-
-// /// (--------------need review--------------)
-// /// user select key
-
-
-
-// for (var i = 0; i < countries.length; i++)
-//   if (computerchoice || "spain" || "croatia" || "fiji" || "guam") {
-//     console.log(blankanswer[i]);
-//   };
-
-// ////////// selecting a key in dashes
-// for (var i = 0; i < countryname.length; i++)
-//   if (computerchoice === "spain" && userText === "s") {
-//     console.log("correct");
-//   }
-
-//         /////----------- SCORE CALCULATIONS------------------------------------
-
-</script>
 </html>
