--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Wins: <span id="win">__</p>
             <p>Losses: <span id="loss">__</p>
             <p>Guesses Left: <span id="guessleft">__</p>
-            <p> Your Guesses So Far: <span id="guessnow">__</p>
+            <p> Your Guesses So Far: <span id="chances">__</p>
         </p>
     </div>
 
