--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <br>
             <p>Wins: <span id="win">__</p>
             <p>Losses: <span id="loss">__</p>
-            <p>Guesses Left: <span id="guessleft">__</p>
+            <p>Guesses Left: <span id="guessesLeft">__</p>
             <p> Your Guesses So Far: <span id="chances">__</p>
         </p>
     </div>
