--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p>Losses: <span id="loss">__</p>
             <p>Guesses Left: <span id="guessesLeft">__</p>
             <p> Your Guesses So Far: <span id="chances">__</p>
+                <p><span id="correctguess"></span></p>
         </p>
     </div>
 
