--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <div span="userguess">
         <p>
             <p id ="start"></p>
-            <h2><span type="text" id="user-text"><strong>TYPE HERE</strong></span></h2>
+            <h2><span type="text" id="user-text"><strong>usertext</strong></span></h2>
             <h2><span type="text" id="wordtoguess"> </span></h2>
-            <p>match <span id="match"></p>
-            <br>
             <p>Wins: <span id="win"></p>
-            <p>Losses: <span id="loss">__</p>
+            <p>Losses: <span id="loss"></p>
             <p>Guesses Left: <span id="guessesLeft"></p>
-            <p> Your Guesses So Far: <span id="chances"></p>
+            <p> Chances: <span id="tries"></p>
                 <p><span id="correctguess"></span></p>
         </p>
     </div>
