--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <center>
     <h1>Guess The Country</h1>
     <div span="userguess">
         <p>
@@ -34,7 +35,7 @@
           
     </div>
 
-
+    </center>
 <script src="./assets/javascript/game.js"></script>
 </body>
 </html>
