--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 color: #fff;
+                border: #000 50px solid;
             }
 
-
+            /* credited to codepen https://codepen.io/chonz0/pen/NGRbWj */
             .pane {
                 width: 1em;
                 height: 1em;
@@ -88,129 +89,117 @@
                 z-index: 10;
                 margin-top: -1px
             }
+
+            h1 {
+                text-align: center;
+            }
         </style>
 
         <body>
             <br><br>
             <div class="containers">
-<div class="row">
-                <div class="col s12">
-                    <div class="pane">W</div>
-                    <div class="pane">O</div>
-                    <div class="pane">R</div>
-                    <div class="pane">D</div>
-                    <div class="pane">?</div>
-                    <div class="pane">G</div>
-                    <div class="pane">U</div>
-                    <div class="pane">E</div>
-                    <div class="pane">S</div>
-                    <div class="pane">S</div>
-                </div>
-</div>
+                <div class="row">
+                    <div class="col s12">
+                        <h1>
+                            <div class="pane">W</div>
+                            <div class="pane">O</div>
+                            <div class="pane">R</div>
+                            <div class="pane">D</div>
+                            <div class="pane">-</div>
+                            <div class="pane">G</div>
+                            <div class="pane">U</div>
+                            <div class="pane">E</div>
+                            <div class="pane">S</div>
+                            <div class="pane">S</div>
+                        </h1>
+                    </div>
+                </div> <br><br><br><br>
 
-                <div class="col s12">
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                </div>
+                <div class="row">
 
-                <div class="col s12">
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
-                    <div class="pane"></div>
+                    <div class="col s12">
+                        <h1> Guess The Country</h1>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                        <div class="pane"></div>
+                    </div>
                 </div>
 
-<br>
+
+                <br><br>
+                <br>
+                <div class="row"></div>
                 <div class="col s12">
                     <div class="pane">W</div>
                     <div class="pane">I</div>
                     <div class="pane">N</div>
                     <div class="pane">S:</div>
-                    <div class="pane">?</div>
+                    <div class="pane">0</div>
 
                 </div>
                 <br>
-                
-                    <div class="col s12">
-                        <div class="pane">L</div>
-                        <div class="pane">O</div>
-                        <div class="pane">O</div>
-                        <div class="pane">S</div>
-                        <div class="pane">E:</div>
-                        <div class="pane">?</div>
+
+                <div class="col s12">
+                    <div class="pane">L</div>
+                    <div class="pane">O</div>
+                    <div class="pane">O</div>
+                    <div class="pane">S</div>
+                    <div class="pane">E:</div>
+                    <div class="pane"> <span id="loss">0</div>
+                </div>
+
+                <br>
+
+                <div class="col s12">
+                    <div class="pane">C</div>
+                    <div class="pane">H</div>
+                    <div class="pane">A</div>
+                    <div class="pane">N</div>
+                    <div class="pane">C</div>
+                    <div class="pane">E</div>
+                    <div class="pane">S:</div>
+                    <div class="pane"><span id="chances">10
                     </div>
-
-                  <br>
-                 
-                        <div class="col s12">
-                            <div class="pane">C</div>
-                            <div class="pane">H</div>
-                            <div class="pane">A</div>
-                            <div class="pane">N</div>
-                            <div class="pane">C</div>
-                            <div class="pane">E</div>
-                            <div class="pane">S:</div>
-                            <div class="pane"><span id="chances"></p></div>
-                        </div>
-
-
-                        <div class="row">
-                            <div class="col s12">Word Guess</div>
-                            <div class="col s6">6-columns (one-half)</div>
-                            <div class="col s6">6-columns (one-half)</div>
-                        </div>
-                        <div class="row">
-                            <div class="col s12">Word Guess</div>
-                            <div class="col s6">6-columns (one-half)</div>
-                            <div class="col s6">6-columns (one-half)</div>
-                        </div>
+                </div>
 
 
 
 
+                <div id="userguess"> <br><br><br><br>
+                    <p>
+                        <p id="start"></p>
+                        <h2><span type="text" id="user-text"><strong></strong></span></h2>
 
-                        <h1> Guess The Country</h1>
-                        <div id="userguess"> <br><br><br><br>
+                        <div span="userguess">
                             <p>
                                 <p id="start"></p>
-                                <h2><span type="text" id="user-text"><strong></strong></span></h2>
+                                <span id="msg"></span>
+                                <span type="text" id="user-text"><strong>letter you have guessed</strong></span>
+                                <h2 id="correctlett"> </h2>
+                                <h2><span type="text" id="wordtoguess"> </span></h2>
 
-                                <div span="userguess">
-                                    <p>
-                                        <p id="start"></p>
-                                        <span id="msg"></span>
-                                        <span type="text" id="user-text"><strong>letter you have guessed</strong></span>
-                                        <h2 id="correctlett"> </h2>
-                                        <h2><span type="text" id="wordtoguess"> </span></h2>
+                                <p id="rightGuess"></p>
+                                <p id="wrongGuess"></p>
+                                <p id="guessesLeft"></p>
+                                <p>Wins: <span id="win"></p>
+                                <p>Losses: <span id="losses"></p>
+                                <p>Guesses Left: <span id="guessesLeft"></p>
+                                <p> Chances: <span id="chances"></p>
+                                <p><span id="correctguess"></span></p>
+                                <br><br><br><br><br><br>
+                            </p>
 
-                                        <p id="rightGuess"></p>
-                                        <p id="wrongGuess"></p>
-                                        <p id="guessesLeft"></p>
-                                        <p>Wins: <span id="win"></p>
-                                        <p>Losses: <span id="loss"></p>
-                                        <p>Guesses Left: <span id="guessesLeft"></p>
-                                        <p> Chances: <span id="chances"></p>
-                                        <p><span id="correctguess"></span></p>
-                                        <br><br><br><br><br><br>
-                                    </p>
-
-                                </div>
                         </div>
+                </div>
 
 
-                        <script src="H:\word guess\game.js"></script>
+                <script src="H:\word guess\game.js"></script>
         </body>
 
         </html>
@@ -225,4 +214,3 @@
 </body>
 
 </html>
-
