update style and code for working

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div> -->
 
 
-                <script src="H:\word guess\game.js"></script>
+                <script src="assets/javascript/game.js"></script>
         </body>
 
         </html>
